--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -1,25 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Taller1</string>
-    <string name="Creacion_Manillas">Handle creation</string>
-    <string name="Cantidad_Manillas">Number of handles</string>
-    <string name="Dije">Charms</string>
-    <string name="Material">Material</string>
-    <string name="Moneda">Payment currency</string>
-    <string name="Valor_Total">Value of the sale</string>
-    <string name="Cuero">Leather</string>
-    <string name="Cuerda">Rope</string>
-    <string name="Martillo">Hammer</string>
-    <string name="Ancla">Anchor</string>
-    <string name="Dolar">Dollar</string>
-    <string name="Peso_Colombiano">Colombian peso</string>
-    <string name="Nuevo">New</string>
-    <string name="Calcular">Calculate</string>
-    <string name="Error1">Please type the number of handles</string>
-    <string name="Error2">Please enter a value different from zero</string>
-    <string name="Tipo_De_Dije">Kind of charms</string>
-    <string name="Oro">Gold</string>
-    <string name="Oro_Rosado">Pink Gold</string>
-    <string name="Plata">Silver</string>
-    <string name="Niquel">Nickel</string>
+    <string name="cuadrado">Square</string>
+    <string name="rectangulo">Rectangle</string>
+    <string name="areas">Areas</string>
+    <string name="volumenes">Volumes</string>
+    <string name="esfera">Sphere</string>
+    <string name="cubo">Cube</string>
+    <string name="listar_operaciones">List operations</string>
+    <string name="operaciones">Operations performed</string>
+    <string name="titulo_area_cuadrado">Square area</string>
+    <string name="lado_cuadrado">Side value</string>
+    <string name="calcular">Calculate</string>
+    <string name="limpiar">Clean</string>
+    <string name="descripcion">Description</string>
+    <string name="datos">Data</string>
+    <string name="resultado">Result</string>
+    <string name="titulo_rectangulo">Rectangle area</string>
+    <string name="base_rectangulo">Base</string>
+    <string name="altura_recntangulo">Height</string>
+    <string name="valor_radio_esfera">Radio value</string>
+    <string name="volumen_esfera">Volume of a sphere</string>
+    <string name="descripcion_cubo">Volume of a cube</string>
+    <string name="valor_arista_cubo">Value of the edge</string>
 </resources>
